# DoXOR

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.sh
Java/: DoXOR.java  manifest.txt
src/: DoHMAC_MD5.py  DoXOR.cpp  DoXOR.py  main.rs
